# datawagon-loader

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DAVE.md  GEMINI.md  GORDON.md  LICENSE  Makefile  datawagon-config.toml  pyproject.toml  pytest.ini  readme.md  requirements-dev.txt  requirements.txt  setup-venv.bat  setup-venv.sh  setup.py  source-config.toml  source_config.toml  update-venv.bat  update-venv.sh  update.sh
.github/workflows/: build-and-release.yml  build.yml  ci.yml  release.yml
datawagon/: __init__.py  __main__.py  console.py  csv_file_info.py  csv_loader.py  database_handler.py  exceptions.py  file_scanner.py  file_utils.py  gzipped_csv_loader.py  logging_config.py  main.py  postgres_database_manager.py  test_file_utils.py  validate_parameters.py
datawagon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
datawagon/bucket/: __init__.py  analytics_provider.py  bigquery_manager.py  gcs_manager.py  retry_utils.py  schema_inference.py  storage_provider.py
datawagon/commands/: __init__.py  check_database.py  check_db_connection.py  check_files.py  check_schema.py  compare.py  create_bigquery_tables.py  drop_bigquery_tables.py  file_zip_to_gzip.py  files_in_database.py  files_in_local_fs.py  files_in_storage.py  import_all_csv.py  import_csv.py  import_single_csv.py  list_bigquery_tables.py  manage_indexes.py  migrate_to_versioned_folders.py  recreate_bigquery_tables.py  reset_database.py  scan_files.py  test_db_connection.py  upload_to_storage.py  validate_config.py
datawagon/config/: __init__.py  config_validator.py
datawagon/database/: database_handler.py  index_manager.py  postgres_database_manager.py
datawagon/objects/: __init__.py  app_config.py  app_settings.py  bigquery_table_metadata.py  csv_file_info.py  csv_file_info_override.py  csv_loader.py  current_table_data.py  data_type_config.py  database_manager.py  existing_file_results.py  file_comparator.py  file_utils.py  index_manager.py  managed_file_metadata.py  managed_file_scanner.py  parameter_validator.py  postgres_database_manager.py  source_config.py  source_file_metadata.py  source_file_scanner.py
datawagon/security/: __init__.py  validators.py
datawagon/source_files/: __init__.py
datawagon/utils/: __init__.py  retry.py
docs/: REQUIREMENTS.md  TEST_README.md
notebooks/: explore_data.ipynb  identify_files.ipynb  load_data.ipynb  load_duck.ipynb  loading_large_df.ipynb
tests/: bigquery_manager_test.py  conftest.py  csv_file_info_mock.py  file_utils_test.py  test_bigquery_manager.py  test_bigquery_table_metadata.py  test_console.py  test_create_bigquery_tables.py  test_exceptions.py  test_file_comparator.py  test_file_utils.py  test_logging_config.py  test_managed_file_metadata.py  test_managed_file_scanner.py  test_recreate_bigquery_tables.py  test_schema_inference.py  test_security_validators.py  test_source_config.py  test_version_folder_naming.py
tests/commands/: test_compare.py  test_files_in_storage.py  test_upload_to_storage.py
