[tool.poetry]
name = "datawagon"
version = "1.0.0"
description = "Automated loading of YouTube Analytics files into a PostgreSQL database"
authors = ["JM <jtmcn.dev@gmail.com>"]
license = "MIT"
readme = "readme.md"
packages = [{ include = "datawagon" }]

[tool.poetry.scripts]
datawagon = "datawagon.__main__:__main__"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
click = "^8.1.3"
tabulate = "^0.9.0"
python-dotenv = "^1.0.0"
pandas = "^2.0.2"
toml = "^0.10.2"
pydantic = "^2.3"
google-cloud-storage = "^2.10.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.3.0"
pytest-cov = "^4.1.0"
types-toml = "^0.10.8.6"
pre-commit = "^3.3.3"
types-tabulate = "^0.9.0.2"
types-click = "^7.1.8"
poetry-plugin-export = "^1.6.0"
pyinstaller = "^6.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
