[tool.poetry]
name = "datawagon"
version = "1.0.0"
description = "Automated loading of YouTube Analytics files into a PostgreSQL database"
authors = ["JM <jtmcn.dev@gmail.com>"]
license = "MIT"
readme = "readme.md"
packages = [{ include = "datawagon" }]

[tool.poetry.scripts]
datawagon = "datawagon.__main__:__main__"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
click = "^8.1.3"
rich = "^13.7.0"
python-dotenv = "^1.0.0"
pandas = "^2.0.2"
toml = "^0.10.2"
pydantic = "^2.3"
google-cloud-storage = "^2.10.0"
google-cloud-bigquery = "^3.38.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
flake8 = "^6.0.0"
isort = "^5.12.0"
black = [
    {version = "^23.3.0", python = ">=3.9,<3.10"},
    {version = "^25.12.0", python = ">=3.10,<3.13"}
]
pytest-cov = "^4.1.0"
types-toml = "^0.10.8.6"
pre-commit = "^3.3.3"
types-click = "^7.1.8"
poetry-plugin-export = "^1.6.0"
pyinstaller = "^6.0.0"
vulture = "^2.11"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"


[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_defs = true
namespace_packages = true
explicit_package_bases = true

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
